--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
 
         <!-- Index.html Re-Direct Here -->
-        <meta http-equiv="refresh" content="0; URL=./pages/construction.html" />
+        <meta http-equiv="refresh" content="0; URL=./pages/welcome.html" />
 
         <!-- Bootstrap Link -->
         <link rel="stylesheet" href="./libraries/">
