--- a/pages/experience.html
+++ b/pages/experience.html
@@ -50,7 +50,7 @@
                             <a class="nav-link active" href="../pages/experience.html">Experience</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link" href="../pages/projects.html">Projects</a>
                         </li>
                     </ul>
                     <!-- <form class="d-flex">
@@ -61,7 +61,7 @@
             </div>
         </nav>
 
-        <div id='article3' class="container-fluid">
+        <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-md-6">    
                     <h3>Company Name:</h3><h5>LeNova, Inc. <img class='px-2' src="../pics/lenovainc_logo.gif" alt="Eisai Logo" style="height:2.5rem;"></h5>
@@ -87,7 +87,7 @@
             </ul>
         </div>
 
-        <div id='article3' class="container-fluid">
+        <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-md-6">    
                     <h3>Company Name:</h3><h5>Eisai, Inc. <img class='px-2' src="../pics/eisai_logo.png" alt="Eisai Logo" style="width:5rem;"></h5>
@@ -116,7 +116,7 @@
             </ul>
         </div>
 
-        <div id='article2' class="container-fluid">
+        <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-md-6">    
                     <h3>Company Name:</h3><h5>Janssen Pharmaceuticals <img class='px-2' src="../pics/janssen_logo.gif" alt="Eisai Logo" style="height:3rem;"></h5>
@@ -145,7 +145,7 @@
             </ul>
         </div>
 
-        <div id='article1' class="container-fluid">
+        <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-md-6">    
                     <h3>Company Name:</h3><h5>Integrated Project Services<img class='px-2' src="../pics/ipsdb_logo.gif" alt="Eisai Logo" style="height:2.5rem;"></h5>
