--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="../pages/experience.html">Experience</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link" href="../pages/projects.html">Projects</a>
                         </li>
                     </ul>
                     <!-- <form class="d-flex">
