fixed project nav active bug

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -47,10 +47,10 @@
                             <a class="nav-link" href="../pages/blog.html">My Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../pages/experience.html">Experience</a>
+                            <a class="nav-link" href="../pages/experience.html">Experience</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/projects.html">Projects</a>
+                            <a class="nav-link active" href="../pages/projects.html">Projects</a>
                         </li>
                     </ul>
                     <!-- <form class="d-flex">
