--- a/pages/experience.html
+++ b/pages/experience.html
@@ -76,7 +76,7 @@
             <div>
                 <span class="h3" style="color:silver;font-style:italic;">Description:</span><span class='h5 px-3'style='color:white;'><a href="https://www.lenovainc.com/" target="_blank">LeNova, Inc. Website</a></span>
             </div>
-            <p>LeNova, Inc. is a licensed engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. was established in 1997 and has a long working history in the biopharmaceutical space and has offices in Pennsylvania and Florida.  I joined LeNova in 2022 to help with business expansion by developing their website.</p>
+            <p>LeNova, Inc. is a licensed engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. was established in 1997 and has extensive experience in the biopharmaceutical space.  I joined LeNova in 2022 to support business expansion initiatives by developing their website.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
                <li>Research business goals, customers and their expected behavior.</li>
