more lenova typo

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -83,7 +83,7 @@
                <li>Propose and update website designs and layouts with key stakeholders.</li>
                <li>Develop the website using HTML, CSS, and JavaScript.</li>
                <li>Ensure website is fully mobile and browser compatible.</li>
-               <li>Testing of all features and support retainer.</li>
+               <li>Testing of all features, website maintenance and updates.</li>
             </ul>
         </div>
 
