darker welcome flipin icon wiggle

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -21,7 +21,6 @@
 
         <!-- My CSS & JS -->
         <link rel="stylesheet" href="../css/welcome.css">
-        <link rel="stylesheet" href="../css/introanimations.css">
         <link rel="stylesheet" href="../css/navbar.css">
         <script src='../js/index.js' defer></script>
         <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
@@ -71,9 +70,9 @@
         </div>
 
         <figure class='animationFlipIn'>
-            <h2 style="letter-spacing:0.125rem;">stationInLife.<span style="color:white;">replace</span>(<br>
-                '<span style="color:#00857c;">Pharmaceutical Engineer</span>',<br>
-                '<span style="color:lime;">Software Developer</span>');</h2>
+            <h2 style="letter-spacing:0.125rem;">stationInLife.<span style="color:purple;">replace</span>(<br>
+                <span style="color:black">__</span>'<span style="color:#00857c;">Pharmaceutical Engineer</span>',<br>
+                <span style="color:black">__</span>'<span style="color:lime;">Software Developer</span>');</h2>
         </figure>
         
         <footer class="container-fluid fixed-bottom">
