added social logos

--- a/pages/construction.html
+++ b/pages/construction.html
@@ -41,7 +41,7 @@
             <h4 class='animationFlipIn'>This page is currently under construction...</h4>
         </figure>
 
-        <div id='article1' class="container-fluid">
+        <!-- <div id='article1' class="container-fluid">
             <h2 class="">Creating a Personal Website on GitHub</h2>
             <p><span style="color:white;padding-right:0.5rem;">Hello World!</span> Pun intended. :)</p>
             <p>My name is Pete and this is my first blog post.  I am enrolled in a Full Stack coding bootcamp and one of our first assignments is to develop a set of instructions for creating a personal GitHub page.</p>
@@ -60,17 +60,18 @@
                 <p style="text-align:end;font-style:italic;padding:0;color:white;"><img src="../pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> - Pete, Feb 2022</p>
                 <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
             </div>
-        </div>
+        </div> -->
         
-        <footer class="container-fluid fixed-bottom">
+        <footer class="container-fluid">
             <p>Copyright © 
                 <script>
                     document.write(new Date().getFullYear())
                 </script> 
                 codeTrackLift
             </p>
-            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></i
-                ></a>
+            <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
+            <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="GitHub Icon"></a>
+            <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo" src="../pics/linkedin_white.png" alt="GitHub Icon"></a>
         </footer>
 
         <!-- JS Libraries: Bootstrap -->
