--- a/pages/projects.html
+++ b/pages/projects.html
@@ -67,7 +67,7 @@
 
         <div class="row container-fluid justify-content-center">
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/odin-calc.png" class="card-img-top" alt="Screenshot of JavaScript Calculator.">
+                <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top" alt="Screenshot of JavaScript Calculator.">
                 <div class="card-body">
                     <h5 class="card-title">JavaScript Calculator</h5>
                     <p class="card-text">Part of The Odin Project Foundations. Accepts mouse and key inputs, and makes drum noises!</p>
@@ -75,10 +75,10 @@
                 </div>
             </div>
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/lmnophoto.png" class="card-img-top" alt="...">
+                <img src="https://codetracklift.github.io/lmnophoto/pics/mermaid_camera.gif" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">L.M.N.O. Photography</h5>
-                    <p class="card-text">Built a landing page for a Photographer based in Philadelphia.  She specializes in weddings, engagements, maternity sessions, and other events!</p>
+                    <p class="card-text">Built a landing page for a Photographer who is based in Philadelphia.  She specializes in weddings, engagements, maternity sessions, and other events!</p>
                     <a href="https://codetracklift.github.io/lmnophoto/" class="btn btn-primary" target="_blank">Click Me</a>
                 </div>
             </div>
@@ -99,8 +99,9 @@
                 </script> 
                 codeTrackLift
             </p>
-            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></i
-                ></a>
+            <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
+            <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="GitHub Icon"></a>
+            <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo" src="../pics/linkedin_white.png" alt="GitHub Icon"></a>
         </footer>
 
         <!-- JS Libraries: Bootstrap -->
