--- a/pages/experience.html
+++ b/pages/experience.html
@@ -179,8 +179,9 @@
                 </script> 
                 codeTrackLift
             </p>
-            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></i
-                ></a>
+            <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
+            <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="GitHub Icon"></a>
+            <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo" src="../pics/linkedin_white.png" alt="GitHub Icon"></a>
         </footer>
 
         <!-- JS Libraries: Bootstrap -->
