--- a/pages/construction.html
+++ b/pages/construction.html
@@ -67,7 +67,7 @@
                 <script>
                     document.write(new Date().getFullYear())
                 </script> 
-                codeTrackLift
+                codeByPete
             </p>
             <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
             <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="GitHub Icon"></a>
