--- a/pages/experience.html
+++ b/pages/experience.html
@@ -32,7 +32,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <img src='../pics/pharma2code_icon.gif' style="width:2.5rem;">
+                    <img id='pharm2CodeLogo' src='../pics/pharma2code_icon.gif' style="width:2.5rem;">
                 </button>
                 <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">Code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -177,7 +177,7 @@
                 <script>
                     document.write(new Date().getFullYear())
                 </script> 
-                codeTrackLift
+                codeByPete
             </p>
             <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
             <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="GitHub Icon"></a>
