--- a/pages/experience.html
+++ b/pages/experience.html
@@ -76,8 +76,8 @@
             <div>
                 <span class="h3" style="color:silver;font-style:italic;">Description:</span><span class='h5 px-3'style='color:white;'><a href="https://www.lenovainc.com/" target="_blank">LeNova, Inc. Website</a></span>
             </div>
-            <p>LeNova, Inc. is a licensed engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. was established in 1997 and has extensive experience in the biopharmaceutical space.  I joined LeNova in 2022 to support business expansion initiatives by developing their website.</p>
-            <p>My roles and responsibilities included:</p>
+            <p>LeNova, Inc. is a licensed engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. was established in 1997 and has extensive experience in the biopharmaceutical space.  I joined LeNova in 2022 to support business expansion initiatives and develop their website.</p>
+            <p>My roles and responsibilities include:</p>
             <ul>
                <li>Research business goals, customers and their expected behavior.</li>
                <li>Propose and update website designs and layouts with key stakeholders.</li>
@@ -102,7 +102,7 @@
             <div>
                 <span class="h3" style="color:silver;font-style:italic;">Description:</span><span class='h5 px-3'style='color:white;'><a href="https://us.eisai.com/" target="_blank">Eisai Website</a></span>
             </div>
-            <p>Eisai is a research based human health care company that discovers, develops, and markets products throughout the world.  I started at Eisai when it was still known as Morphotek and I was initially hired as a Senior Validation Specialist, but transitioned to Quality in 2012.</p>
+            <p>Eisai is a research based human health care company that discovers, develops, and markets products throughout the world.  I started at Eisai when it was still known as Morphotek and I was initially hired as a Contract Senior Validation Specialist, but transitioned to a full time employee with their Quality Assurance organization in 2012.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
                 <li>Quality Lead for the Quality Management Systems (QMS): Document Control, Validation, Facilities, Automation, Deviation Management, and Change Control.</li>
@@ -160,7 +160,7 @@
             <div>
                 <span class="h3" style="color:silver;font-style:italic;">Description:</span><span class='h5 px-3'style='color:white;'><a href="https://www.ipsdb.com/" target="_blank">IPS Website</a></span>
             </div>
-            <p>Integrated Project Services is a fully integrated, design-build engineering firm specializing in the life sciences and semiconductor industries.  I joined IPS in 2002 after graduated from the University of Delaware with a Bachelor's Degree in Biological Sciences.</p>
+            <p>Integrated Project Services is a fully integrated, design-build engineering firm specializing in the life sciences and semiconductor industries.  I joined IPS as a Validation Specialist in 2002 after graduated from the University of Delaware with a Bachelor's Degree in Biological Sciences.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
                 <li>Detailed preparation, execution, and review of validation protocols, test scripts, and reports, commissioning documentation, engineering turnover packages, and standard operating procedures.</li>
