project wordsmithing & rps target _blank

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -70,7 +70,7 @@
                 <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top" alt="Screenshot of JavaScript Calculator.">
                 <div class="card-body">
                     <h5 class="card-title">JavaScript Calculator</h5>
-                    <p class="card-text">Part of The Odin Project Foundations. Accepts mouse and key inputs, and makes drum noises!</p>
+                    <p class="card-text">My second JavaScript Project, this was also completed as part of The Odin Project Foundations course. Accepts mouse and key inputs, and makes drum sound effects!</p>
                     <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-primary" target="_blank">Click Me</a>
                 </div>
             </div>
@@ -86,8 +86,8 @@
                 <img src="../pics/rock-paper-scissors.png" class="card-img-top" alt="Screenshot of a Rock, Paper, Scissors project.">
                 <div class="card-body">
                     <h5 class="card-title">Rock, Paper, Scissors</h5>
-                    <p class="card-text">One of my earlier projects that was completed as part of The Odin Project.  Accepts text and mouse inputs with text validation and results tracking!</p>
-                    <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-primary">Click Me</a>
+                    <p class="card-text">My first JavaScript project, this was completed as part of The Odin Project Foundations course.  Accepts text and mouse inputs with text validation and results tracking!</p>
+                    <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-primary" target="'_blank">Click Me</a>
                 </div>
             </div>
         </div>
