--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,7 +62,9 @@
         </nav>
 
         <div class="container-fluid myArticles">
-            <h1>Thanks for checking out my Projects.  There will be more to come, please visit again!</h1>
+            <h1>Thanks for checking out my Projects.</h1>
+            <hr style="color:transparent;">
+            <h3>There will be more to come, please visit again!</h3>
         </div>
 
         <div class="row container-fluid justify-content-center">
@@ -71,7 +73,7 @@
                 <div class="card-body">
                     <h5 class="card-title">JavaScript Calculator</h5>
                     <p class="card-text">My second JavaScript Project, this was also completed as part of The Odin Project Foundations course. Accepts mouse and key inputs, and makes drum sound effects!</p>
-                    <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-primary" target="_blank">Click Me</a>
+                    <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Click Me</a>
                 </div>
             </div>
             <div class="card col-sm-4" style="width: 18rem;">
@@ -79,7 +81,7 @@
                 <div class="card-body">
                     <h5 class="card-title">L.M.N.O. Photography</h5>
                     <p class="card-text">Built a landing page for a Photographer who is based in Philadelphia.  She specializes in weddings, engagements, maternity sessions, and other events!</p>
-                    <a href="https://codetracklift.github.io/lmnophoto/" class="btn btn-primary" target="_blank">Click Me</a>
+                    <a href="https://codetracklift.github.io/lmnophoto/" class="btn btn-secondary" target="_blank">Click Me</a>
                 </div>
             </div>
             <div class="card col-sm-4" style="width: 18rem;">
@@ -87,7 +89,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Rock, Paper, Scissors</h5>
                     <p class="card-text">My first JavaScript project, this was completed as part of The Odin Project Foundations course.  Accepts text and mouse inputs with text validation and results tracking!</p>
-                    <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-primary" target="'_blank">Click Me</a>
+                    <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Click Me</a>
                 </div>
             </div>
         </div>
