added etch to projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -68,27 +68,39 @@
         </div>
 
         <div class="row container-fluid justify-content-center">
-            <div class="card col-sm-4" style="width:18rem;">
-                <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top" alt="Screenshot of JavaScript Calculator.">
-                <div class="card-body">
-                    <h5 class="card-title">JavaScript Calculator</h5>
-                    <p class="card-text">My second JavaScript Project, this was also completed as part of The Odin Project Foundations course. Accepts mouse and key inputs, and makes drum sound effects!</p>
-                    <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Click Me</a>
-                </div>
-            </div>
             <div class="card col-sm-4" style="width: 18rem;">
                 <img src="https://codetracklift.github.io/lmnophoto/pics/mermaid_camera.gif" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">L.M.N.O. Photography</h5>
                     <p class="card-text">Built a landing page for a Photographer who is based in Philadelphia.  She specializes in weddings, engagements, maternity sessions, and other events!</p>
+                    <p class="card-text">This was my first website using Bootstrap and ScrollMagic.</p>
                     <a href="https://codetracklift.github.io/lmnophoto/" class="btn btn-secondary" target="_blank">Click Me</a>
+                </div>
+            </div>
+            <div class="card col-sm-4" style="width:18rem;">
+                <img src="https://codetracklift.github.io/odin-calc/favicon.ico" class="card-img-top" alt="Calculator image">
+                <div class="card-body">
+                    <h5 class="card-title">JavaScript Calculator</h5>
+                    <p class="card-text">My third JavaScript Project, this was also completed as part of The Odin Project Foundations course.</p>
+                    <p class="card-text">Accepts mouse and key inputs, and makes drum sound effects!</p>
+                    <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Click Me</a>
+                </div>
+            </div>
+            <div class="card col-sm-4" style="width:18rem;">
+                <img src="../pics/etch-a-sketch.jpg" class="card-img-top" alt="Screenshot of etch-a-sketch project.">
+                <div class="card-body">
+                    <h5 class="card-title">Etch-A-Sketch</h5>
+                    <p class="card-text">My second JavaScript Project, this was completed as part of The Odin Project Foundations course.</p>
+                    <p class="card-text">Accepts mouse and key inputs, and the pixel resolution can be resized!</p>
+                    <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary" target="_blank">Click Me</a>
                 </div>
             </div>
             <div class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/rock-paper-scissors.png" class="card-img-top" alt="Screenshot of a Rock, Paper, Scissors project.">
                 <div class="card-body">
                     <h5 class="card-title">Rock, Paper, Scissors</h5>
-                    <p class="card-text">My first JavaScript project, this was completed as part of The Odin Project Foundations course.  Accepts text and mouse inputs with text validation and results tracking!</p>
+                    <p class="card-text">My first JavaScript project, this was completed as part of The Odin Project Foundations course.</p>
+                    <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
                     <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary" target="'_blank">Click Me</a>
                 </div>
             </div>
