menlo regular font, global.css

--- a/index.html
+++ b/index.html
@@ -10,20 +10,8 @@
         <!-- Index.html Re-Direct Here -->
         <meta http-equiv="refresh" content="0; URL=./pages/welcome.html" />
 
-        <!-- Bootstrap Link -->
-        <link rel="stylesheet" href="./libraries/">
-
-        <!-- Font CSS Links -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
-
-        <!-- Scroll Magic JS -->
-        <script src="./libraries/ScrollMagic.min.js"></script>
-
         <!-- My CSS & JS -->
-        <link rel="stylesheet" href="./css/construction.css">
+        <link rel="stylesheet" href="./css/global.css">
         <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico">
 
         <title>codeByPete</title>
@@ -31,18 +19,5 @@
 
     <body>
         
-        <footer class="container-fluid fixed-bottom">
-            <p>Copyright © 
-                <script>
-                    document.write(new Date().getFullYear())
-                </script> 
-                codeTrackLift
-            </p>
-            <a href="https://github.com/codetracklift" target="_blank"><img id="gitLogo" src="./pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></i
-                ></a>
-        </footer>
-
-        <!-- JS Libraries: Bootstrap -->
-        <script src="./libraries/bootstrap.min.js"></script>
     </body>
 </html>
