--- a/pages/experience.html
+++ b/pages/experience.html
@@ -64,7 +64,7 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-md-6">    
-                    <h3>Company:</h3><h5><img class='px-2' src="../pics/lenovainc_logo.gif" alt="Eisai Logo" style="height:2.5rem;"> LeNova, Inc.</h5>
+                    <h3>Company: <img class='px-2' src="../pics/lenovainc_logo.gif" alt="Eisai Logo" style="height:2.5rem;"></h3><h5>LeNova, Inc.</h5>
                 </div>
                 <div class="col-md-6">    
                     <h3>Employment Period:</h3><h5>Jan 2022 - Present</h5>
@@ -90,7 +90,7 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-md-6">    
-                    <h3>Company:</h3><h5><img class='px-2' src="../pics/eisai_logo.png" alt="Eisai Logo" style="width:5rem;"> Eisai, Inc.</h5>
+                    <h3>Company: <img class='px-2' src="../pics/eisai_logo.png" alt="Eisai Logo" style="width:5rem;"></h3><h5>Eisai, Inc.</h5>
                 </div>
                 <div class="col-md-6">    
                     <h3>Employment Period:</h3><h5>Sep 2010 - Dec 2021</h5>
@@ -119,7 +119,7 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-md-6">    
-                    <h3>Company:</h3><h5><img class='px-2' src="../pics/janssen_logo.jpg" alt="Eisai Logo" style="height:3rem;border-radius:100%;"> Janssen Pharmaceuticals</h5>
+                    <h3>Company: <img class='px-2' src="../pics/janssen_logo.jpg" alt="Eisai Logo" style="height:3rem;border-radius:100%;"></h3><h5> Janssen Pharmaceuticals</h5>
                 </div>
                 <div class="col-md-6">    
                     <h3>Employment Period:</h3><h5>Sep 2006 - Sep 2010</h5>
@@ -148,7 +148,7 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-md-6">    
-                    <h3>Company:</h3><h5><img class='px-2' src="../pics/ipsdb_logo.gif" alt="Eisai Logo" style="height:2.5rem;"> Integrated Project Services</h5>
+                    <h3>Company: <img class='px-2' src="../pics/ipsdb_logo.gif" alt="Eisai Logo" style="height:2.5rem;"></h3><h5>Integrated Project Services</h5>
                 </div>
                 <div class="col-md-6">    
                     <h3>Employment Period:</h3><h5>Feb 2002 - Sep 2006</h5>
