experience jnj typo

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -131,7 +131,7 @@
             <div>
                 <span class="h3">Description</span><span class='h5 px-3'style='color:white;'><a href="https://www.janssen.com/" target="_blank">Website</a></span>
             </div>
-            <p>Janssen Pharmaceuticals is a wholly-owned by Johnson & Johnson, and acquired Centocor Biopharmaceutical in 1999.  Centocor was a world leader in monoclonal antibody production and cell therapy technology.  I joined Centocor R&D / J&J in 2006 as a Validation Engineer II.</p>
+            <p>Janssen Pharmaceuticals is a wholly-owned subsidiary of Johnson & Johnson, and acquired Centocor Biopharmaceutical in 1999.  Centocor was a world leader in monoclonal antibody production and cell therapy technology.  I joined Centocor R&D / J&J in 2006 as a Validation Engineer II.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
                 <li>Managing a multi-site laboratory equipment qualification program.</li>
