--- a/pages/blog.html
+++ b/pages/blog.html
@@ -68,7 +68,7 @@
                 <div class="col-md-4">
                     <p>Hello!</p>
                     <p>This is my second blog post / discussion assignment from my Full Stack Coding Bootcamp.  In the Magic Ball challenge, we used HTML, CSS, and JavaScript to create a ball image and make it move.</p>
-                    <p>In addition, I decided to have some fun with and added some extra features.  Please see the video and the write-up below for more details!</p>
+                    <p>In addition, I decided to have some fun with and added some extra features.  Please see the video and write-up below for more details.</p>
                 </div>
                 <div class="col-md-8 my-auto">
                     <h6>Video</h6>
@@ -84,7 +84,7 @@
                             <img class="img-fluid" src="../pics/magicBall/magicBall_originalDiv.png" alt="Screenshot of HTML showing the 'Original Div' portion of my Magic Ball Project.">
                         </a>
                     </div>
-                    <p>Image 1 shows the HTML 'div' for the ball and its style attributes.  This was provided by the MIT xPro Bootcamp.  I added the 'body' tags since I was using Visual Studio Code and the editor indicated that I needed to add those in order to use the Live Preview feature (updates the HTML page when I save).</p>
+                    <p>Image 1 shows the HTML 'div' for the ball and its style attributes.  This was provided by the MIT xPro Bootcamp.  I added the 'body' tags since I was using <a href="https://code.visualstudio.com/">Visual Studio Code</a> and the editor indicated that I needed to add those in order to use the <a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer" target="_blank">Live Server Extension</a> (updates the HTML page when I save).</p>
                 </div>
                 <div class="col-sm-6">
                     <div>
@@ -93,53 +93,54 @@
                             <img class="img-fluid" src="../pics/magicBall/magicBall_myLogo.png" alt="Screenshot of HTML showing my logo in image tags.">
                         </a>
                     </div>
-                    <p>In Image 2, I decided to personalize this challenge by adding my logo to the ball.  I did this by using an HTML 'img' tag instead of the 'div' tags.  Note that the 'img' tag does not have a separate closing tag.  I then added the 'src' link and kept the 'id' and 'style' attributes the same.</p>
+                    <p>In Image 2, I decided to personalize this challenge by adding my logo to the ball.  I did this by using an HTML <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img" target="_blank">'img'</a> tag instead of the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/div" target="_blank">'div'</a> tags.  Note that the 'img' tag does not have a separate closing tag.  I then added the 'src' link and kept the 'id' and 'style' attributes the same.</p>
                 </div>
             </div>
             <div class="container-fluid row">
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                     <div>
                         <h6>Image 3</h6>
                         <a href="../pics/magicBall/magicBall_globalVariables.png" target="_blank">
                             <img class="img-fluid" src="../pics/magicBall/magicBall_globalVariables.png" alt="Screenshot of JavaScript showing the global variables for 2D ball movement.">
                         </a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam molestias sapiente quia voluptas vel harum provident odio incidunt laudantium corporis vero consectetur recusandae, reprehenderit libero. Labore, voluptates reprehenderit. Delectus incidunt libero mollitia, nemo natus excepturi ratione quod reiciendis est earum illum, quibusdam inventore dicta fuga! Quasi voluptates consequuntur assumenda delectus.</p>
+                    <p>Image 3 shows the opening <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script" target="_blank">'script'</a> tag, which denotes the beginning of the JavaScript code in this file.  All the global variables for 2D ball movement are listed, including the 'ball' variable that is assigned to the HTMl <a href='https://developer.mozilla.org/en-US/docs/Web/API/Document/getElementById' target='_blank'>document element with the ID tag</a> of 'ball'.</p>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-8">
                     <div>
                         <h6>Image 4</h6>
-                        <a href="../pics/magicBall/magicBall_2dMovementFunction.png">
+                        <a href="../pics/magicBall/magicBall_2dMovementFunction.png" target="_blank">
                             <img class="img-fluid" src="../pics/magicBall/magicBall_2dMovementFunction.png" alt="Screenshot of JavaScript showing the 2D ball movement function.">
                         </a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat optio qui labore accusantium totam sapiente? Modi quae molestias veritatis totam non voluptatem aspernatur! Error omnis suscipit doloremque ullam dolore blanditiis soluta expedita accusamus quas autem alias enim ea quia eveniet, veritatis iste debitis ex repellendus molestiae? Suscipit, iusto accusamus? Magnam!</p>
+                    <p>Image 4 shows the 2D ball movement function using <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions" target="_blank">JavaScript arrow syntax</a>.  <a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/if...else' target='_blank'>Conditional statements</a> detect if the ball reaches x-axis or y-axis limits. If a limit is reached, the corresponding 'velocity' variable is multiplied by -1 to reverse directions.</p>
+                    <p>If no limits are reached, the 'position' is updated by adding the 'velocity' variable.  The CSS is then updated by assigning the 'left' and 'top' styles to the x-axis and y-axis 'position', respectively.  Note that the 'px' suffix is added via <a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Addition' target='_blank'>'addition operator concatenation'</a>.</p>
+                    <p>Finally, the <a href='https://developer.mozilla.org/en-US/docs/Web/API/setInterval' target='_blank'>'setInterval'</a> method is used to call the 'moveBall2D' function based on the frequency established in the 'speed' variable.</p>
                 </div>
+            </div>
+            <div>
+                <h6>Image 5</h6>
+                <a href="../pics/magicBall/magicBall_randomColorFunction.png" target="_blank">
+                    <img class="img-fluid" src="../pics/magicBall/magicBall_randomColorFunction.png" alt="Screenshot of JavaScript showing the random color function.">
+                </a>
+                <p>Image 5 shows the random color function, which uses the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/floor" target="_blank">'Math.floor'</a> and <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random" target="_blank">'Math.random'</a> JavaScript methods to randomly generate an integer for each of the RGB colors.  Each RGB color variable is then <a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Addition' target='_blank'>concatentated</a> and assigned to the variable 'color'.</p>
             </div>
             <div class="container-fluid row">
                 <div class="col-sm-6">
-                    <div>
-                        <h6>Image 5</h6>
-                        <a href="../pics/magicBall/magicBall_randomColorFunction.png" target="_blank">
-                            <img class="img-fluid" src="../pics/magicBall/magicBall_randomColorFunction.png" alt="Screenshot of JavaScript showing the random color function.">
-                        </a>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse necessitatibus nulla atque, ab, corporis adipisci, explicabo quo exercitationem incidunt molestiae quis pariatur! Quam error ut facilis iusto debitis asperiores! Magni sit inventore totam tempora, vel suscipit harum! Rerum dolorem consequuntur molestiae fugit maxime dignissimos velit, incidunt neque impedit similique voluptatibus.</p>
+                    <h6>Image 6</h6>
+                    <a href="../pics/magicBall/magicBall_resizeFunction.png" target="_blank">
+                        <img class="img-fluid" src="../pics/magicBall/magicBall_resizeFunction.png" alt="Screenshot of JavaScript showing the resize function.">
+                    </a>
+                    <p>Image 6 starts off with some new variables so that the ball can be resized along its journey.  This includes a starting size (set to match the original 'ball' height & width), min and max limits, and a rate of change.</p>
                 </div>
-                <div class="col-sm-6">
-                    <div>
-                        <h6>Image 6</h6>
-                        <a href="../pics/magicBall/magicBall_resizeFunction.png" target="_blank">
-                            <img class="img-fluid" src="../pics/magicBall/magicBall_resizeFunction.png" alt="Screenshot of JavaScript showing the resize function.">
-                        </a>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, magni, quasi nesciunt facilis dolor necessitatibus molestiae officia repellat, dicta aut doloremque. Eos quae magnam officia nostrum possimus deserunt, quos aspernatur tempora eaque quasi autem tenetur totam explicabo eius architecto nesciunt aliquid, repellat adipisci consequuntur esse culpa sequi nihil quis. Reiciendis!</p>
+                <div class="col-sm-6 my-auto">
+                    <p>Next is an <a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions' target='_blank'>arrow function</a> that includes a <a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/if...else' target='_blank'>condition statements</a> to detect size limits.  If any limits are reached, the 'resizeRate' variable is mulitplied by -1 to change from growing to shrinking and vice versa.  The new size is then assigned the the CSS style height and width, respectively.  Note that I chose to use <a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals' target='_blank'>template literals</a> here instead of <a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Addition' target='_blank'>concatentation</a>.</p>
                 </div>
             </div>
                 
             <p>Please let me know with any suggestions, or comments.  Thank you again for visiting my site, and happy coding!</p>
             <div>
-                <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> - Pete, Feb 2022</p>
+                <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> - Pete, Feb 20, 2022</p>
                 <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
             </div>
         </div>
@@ -159,7 +160,7 @@
             </ol>
             <p style="padding-top:-1rem; padding-bottom:2rem;">Please let me know with any suggestions, or comments.  Thank you again for visiting my site, and happy coding!</p>
             <div>
-                <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> - Pete, Feb 2022</p>
+                <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg" alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> - Pete, Feb 16, 2022</p>
                 <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
             </div>
         </div>
