pill footer md, lowercase code in nav

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -35,7 +35,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <img src='../pics/pharma2code_icon.gif' style="width:2.5rem;">
                 </button>
-                <!-- <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">Code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3> -->
+                <!-- <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3> -->
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -80,7 +80,8 @@
                 <script>
                     document.write(new Date().getFullYear())
                 </script> 
-                codeByPete
+                <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;' alt="My 'Pharma 2 Code' Logo.">
+                <span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
             </p>
             <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
             <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="GitHub Icon"></a>
