--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
+        <meta name='description' content='codeByPete codeTrackLift Peter Pete Chu Web Developer Software Developer Full Stack Portfolio'>
 
         <!-- Index.html Re-Direct Here -->
         <meta http-equiv="refresh" content="0; URL=./pages/welcome.html" />
