--- a/pages/construction.html
+++ b/pages/construction.html
@@ -20,6 +20,7 @@
         <script src="../libraries/ScrollMagic.min.js"></script>
 
         <!-- My CSS & JS -->
+        <link rel="stylesheet" href="../css/global.css">
         <link rel="stylesheet" href="../css/construction.css">
         <script src='../index.js' defer></script>
         <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
@@ -67,7 +68,7 @@
                 <script>
                     document.write(new Date().getFullYear())
                 </script> 
-                codeByPete
+                <span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span>
             </p>
             <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo" src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
             <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo" src="../pics/Twitter_social_icons-circle-white.png" alt="GitHub Icon"></a>
