better blog layout

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -73,13 +73,17 @@
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <div class="'container-fluid row">
-                            <div class="col-md-8 my-auto">
-                                <iframe class='ratio ratio-4x3' width="420" height="315" src="https://youtube.com/embed/f0mTQx5ATQI">
+                            <div class="col-sm-8 my-auto">
+                                <iframe class='ratio ratio-4x3' width="420" height="315" src="https://youtube.com/embed/f0mTQx5ATQI?&autoplay=1&mute=1" frameborder="0" allowfullscreen>
                                 </iframe>
                             </div>
-                            <div class="col-md-4">
-                                <p>Hello!</p>
-                                <p>This is my second blog post & discussion assignment from the MIT xPro Full Stack Coding Bootcamp.  In this Magic Ball challenge, we used HTML, CSS, and JavaScript to create a ball image and make it move.</p>
+                            <div class="col-sm-4">
+                                <div style="margin-top:5vw;">
+                                    Hello! This is my second blog post & discussion assignment from the MIT xPro Full Stack Coding Bootcamp.  In this Magic Ball challenge, we used HTML, CSS, and JavaScript to create a ball image and make it move.
+                                </div>
+                            </div>
+                            <div class="row mx-auto" style="max-width:640px;">
+                                <hr style="background:transparent">
                                 <p>I decided to have some fun with and added some extra features.  Please see the video and write-up below for more details, and some links that I found to be helpful.</p>
                             </div>
                         </div>
