--- a/pages/experience.html
+++ b/pages/experience.html
@@ -63,18 +63,18 @@
 
         <div class="container-fluid myArticles">
             <div class="row">
-                <div class="col-md-6">    
-                    <h3>Company <img class='px-2' src="../pics/lenovainc_logo.gif" alt="Eisai Logo" style="height:2.5rem;"></h3><h5>LeNova, Inc.</h5>
+                <div class="col-sm-8">    
+                    <h3>Company <img class='float-end' src="../pics/lenovainc_logo.gif" alt="LeNova Logo"></h3><h5>LeNova, Inc. <a href="https://www.lenovainc.com/" target="_blank">Website</a></h5>
                 </div>
-                <div class="col-md-6">    
-                    <h3>Employment Period</h3><h5>Jan 2022 - Present</h5>
+                <div class="col-sm-4">    
+                    <h3>Timeframe</h3><h5>January 2022 to July 2022</h5>
                 </div>
             </div>
             <div>
-                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Web Developer</span>
+                <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Web Developer</span><span style="color:gray;">(Contract)</span>
             </div>
             <div>
-                <span class="h3">Description</span><span class='h5 px-3'style='color:white;'><a href="https://www.lenovainc.com/" target="_blank">Website</a></span>
+                <span class="h3">Description</span>
             </div>
             <p>LeNova, Inc. is a licensed engineering and technology solutions provider with a focus on the Life Sciences and Commercial industries.  LeNova, Inc. was established in 1997 and has extensive experience in the biopharmaceutical space.  I joined LeNova in 2022 to support business expansion initiatives and develop their website.</p>
             <p>My roles and responsibilities include:</p>
@@ -89,18 +89,18 @@
 
         <div class="container-fluid myArticles">
             <div class="row">
-                <div class="col-md-6">    
-                    <h3>Company <img class='px-2' src="../pics/eisai_logo.png" alt="Eisai Logo" style="width:5rem;"></h3><h5>Eisai, Inc.</h5>
+                <div class="col-sm-8">    
+                    <h3>Company <img class='float-end' src="../pics/eisai_logo.png" alt="Eisai Logo"></h3><h5>Eisai, Inc. <a href="https://us.eisai.com/" target="_blank">Website</a></h5>
                 </div>
-                <div class="col-md-6">    
-                    <h3>Employment Period</h3><h5>Sep 2010 - Dec 2021</h5>
+                <div class="col-sm-4">    
+                    <h3>Timeframe</h3><h5>September 2010 to December 2021</h5>
                 </div>
             </div>
             <div>
                 <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Senior Quality Engineer</span>
             </div>
             <div>
-                <span class="h3">Description</span><span class='h5 px-3'style='color:white;'><a href="https://us.eisai.com/" target="_blank">Website</a></span>
+                <span class="h3">Description</span>
             </div>
             <p>Eisai is a research based human health care company that discovers, develops, and markets products throughout the world.  I started at Eisai when it was still known as Morphotek and I was initially hired as a Contract Senior Validation Specialist, but transitioned to a full time employee with their Quality Assurance organization in 2012.</p>
             <p>My roles and responsibilities included:</p>
@@ -118,18 +118,18 @@
 
         <div class="container-fluid myArticles">
             <div class="row">
-                <div class="col-md-6">    
-                    <h3>Company <img class='px-2' src="../pics/janssen_logo.jpg" alt="Eisai Logo" style="height:3rem;border-radius:100%;"></h3><h5> Janssen Pharmaceuticals</h5>
+                <div class="col-sm-8">    
+                    <h3>Company <img class='float-end' src="../pics/janssen_logo.jpg" alt="Eisai Logo" style="border-radius:100%;"></h3><h5> Janssen Pharmaceuticals <a href="https://www.janssen.com/" target="_blank">Website</a></h5>
                 </div>
-                <div class="col-md-6">    
-                    <h3>Employment Period</h3><h5>Sep 2006 - Sep 2010</h5>
+                <div class="col-sm-4">    
+                    <h3>Timeframe</h3><h5>September 2006 to September 2010</h5>
                 </div>
             </div>
             <div>
                 <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Senior Validation Engineer</span>
             </div>
             <div>
-                <span class="h3">Description</span><span class='h5 px-3'style='color:white;'><a href="https://www.janssen.com/" target="_blank">Website</a></span>
+                <span class="h3">Description</span><span class='h5 px-3'style='color:white;'></span>
             </div>
             <p>Janssen Pharmaceuticals is a wholly-owned subsidiary of Johnson & Johnson, and acquired Centocor Biopharmaceutical in 1999.  Centocor was a world leader in monoclonal antibody production and cell therapy technology.  I joined Centocor R&D / J&J in 2006 as a Validation Engineer II.</p>
             <p>My roles and responsibilities included:</p>
@@ -147,18 +147,18 @@
 
         <div class="container-fluid myArticles">
             <div class="row">
-                <div class="col-md-6">    
-                    <h3>Company <img class='px-2' src="../pics/ipsdb_logo.gif" alt="Eisai Logo" style="height:2.5rem;"></h3><h5>Integrated Project Services</h5>
+                <div class="col-sm-8">    
+                    <h3>Company <img class='float-end' src="../pics/ipsdb_logo.gif" alt="IPS Logo"></h3><h5>Integrated Project Services <a href="https://www.ipsdb.com/" target="_blank">Website</a></h5>
                 </div>
-                <div class="col-md-6">    
-                    <h3>Employment Period</h3><h5>Feb 2002 - Sep 2006</h5>
+                <div class="col-sm-4">    
+                    <h3>Timeframe</h3><h5>February 2002 to September 2006</h5>
                 </div>
             </div>
             <div>
                 <span class="h3">Position</span><span class='h5 px-3'style='color:white;'>Validation Specialist</span>
             </div>
             <div>
-                <span class="h3">Description</span><span class='h5 px-3'style='color:white;'><a href="https://www.ipsdb.com/" target="_blank">Website</a></span>
+                <span class="h3">Description</span>
             </div>
             <p>Integrated Project Services is a fully integrated, design-build engineering firm specializing in the life sciences and semiconductor industries.  I joined IPS as a Validation Specialist in 2002 after graduated from the University of Delaware with a Bachelor's Degree in Biological Sciences.</p>
             <p>My roles and responsibilities included:</p>
