fixed blog width

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -62,12 +62,12 @@
             </div>
         </nav>
 
-        <div class="accordion myBlog" id="accordionPanelsStayOpenExample">
+        <div class="accordion myBlog mx-auto" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                     <button class="accordion-button bg-transparent" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                    <h5>Magic Ball Challenge</h5>
-                    <h6>Blog Post #2</h6>
+                        <h5>Magic Ball Challenge</h5>
+                        <h6>Blog Post #2</h6>
                     </button>
                 </h2>
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
